deploy: 91c81e25f67b45471bb7483fc62b554b7d3e5ea3

--- a/project.html
+++ b/project.html
@@ -212,6 +212,21 @@
 <div class="article-header-buttons">
 
 
+<a href="https://github.com/whyjz/ncu-env-data-science-template" target="_blank"
+   class="btn btn-sm btn-source-repository-button"
+   title="Source repository"
+   data-bs-placement="bottom" data-bs-toggle="tooltip"
+>
+  
+
+<span class="btn__icon-container">
+  <i class="fab fa-github"></i>
+  </span>
+
+</a>
+
+
+
 
 
 
@@ -391,7 +406,7 @@ This is a template notebook for your term project.
 <p>Latex math block:</p>
 <div class="math notranslate nohighlight">
 \[
-\arg\min\limits_{\textbf{a}}  ||\textbf{y} − \textbf{Xa}||_2^2 + ||\textbf{a}||_2^2
+\arg\min\limits_{\textbf{a}}  ||\textbf{y} − \textbf{Xa}||_2^2 + \lambda||\textbf{a}||_2^2
 \]</div>
 <!-- Check out here if you'd like the equations numbered: https://jupyterbook.org/en/stable/content/math.html -->
 <p>Inserting a figure:</p>
