--- a/search.html
+++ b/search.html
@@ -211,6 +211,21 @@
 <div class="article-header-buttons">
 
 
+<a href="https://github.com/whyjz/ncu-env-data-science-template" target="_blank"
+   class="btn btn-sm btn-source-repository-button"
+   title="Source repository"
+   data-bs-placement="bottom" data-bs-toggle="tooltip"
+>
+  
+
+<span class="btn__icon-container">
+  <i class="fab fa-github"></i>
+  </span>
+
+</a>
+
+
+
 
 <button onclick="toggleFullScreen()"
   class="btn btn-sm btn-fullscreen-button"
